--- a/custom.table/package.json
+++ b/custom.table/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.7.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.74.2"
   },
   "scripts": {
